# img2gba

./: .gitignore  BUTANO_IMAGE_DX_ISSUES.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
src/butano_img/: __init__.py  cli.py  constants.py  converter.py  json_generator.py  palette.py  transparency.py  tui.py  validator.py
src/img2gba/: cli.py  constants.py  converter.py  json_generator.py  palette.py  transparency.py  tui.py  validator.py
tests/: test_converter.py  test_json_generator.py  test_palette.py  test_transparency.py  test_validator.py
